<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Delete_Tweets">Delete Tweet(s)</string>
    <string name="Mentions">Mentions</string>
    <string name="PostTweet">Post your status here…</string>
    <string name="RTs">RTs</string>
    <string name="Refresh_Tweets">Refresh Tweet(s)</string>
    <string name="Select_All">Select All</string>
    <string name="Tab_Home">Home</string>
    <string name="Tab_Mentions">Mentions</string>
    <string name="Tab_Profile">Profile</string>
    <string name="Tweets">Tweets</string>
    <string name="accept">Accept</string>
    <string name="action_DM">Direct Msg</string>
    <string name="action_LogOut">Sign Out</string>
    <string name="action_Search">Search</string>
    <string name="action_Settings">Settings</string>
    <string name="app_name">AndroTweet</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="banner_ad_unit_id">ca-app-pub-0165663276066705/7248078142</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-0165663276066705/5275556541</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-0165663276066705/4930491159</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="empty_string" />
    <string name="no_more_selected">No more selected!</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="campaign_terms_and_conditions">if there is rules will be shown here</string>
    <string name="close">Close</string>
    <string name="no_more_ads_suggestions_title">No More Ads!</string>
    <string name="no_more_ads_suggestions_desc">Do you wants remove Ads for 3 days?
        \n
        \n
        Share your happiness with your friends and win premium access for 3 days!
        \n
        \n
        No full screen Ads for only Premium Accounts.
    </string>
    <string name="no_more_ads_rules">* When you delete sharing tweets before 3 days premium access automatically finished.</string>
    <string name="no_more_ads_actionButton">Win premium access</string>
    <string name="deleteTweets_title">Attention!</string>
    <string name="deleteTweets_desc">Deleted all selected tweets!
    \n
    \n
    if you use twitter mobile app you should clean your app cache.
    </string>
    <string name="twitter_clear_cache"> Settings -> Applications -> Twitter
    \n
    \n
    Touch Clear Data on your android device.
    Other hands yo can check on full web site on browser.</string>
</resources>
