<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/rounded_corner_popup_white"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Title"
        android:textColor="@color/text_light_grey"
        android:textSize="22sp"
        android:visibility="visible"
        android:textStyle="bold"/>

    <View
        android:id="@+id/CampaignSeperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Description"
        android:textColor="@color/text_light_grey"
        android:textSize="14sp"
        android:textStyle="normal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/dialog_okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/pop_up_cancel_gray"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/white"
            android:visibility="visible"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dialog_actionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/pop_up_accept"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/campaign_terms_and_conditions"
        android:textSize="8sp"
        android:visibility="visible"/>


</LinearLayout>
