<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff00aff0"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff0eded"
            android:textSize="20.0sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/refreshTweet"
            android:layout_width="0dp"
            android:layout_height="25.0dip"
            android:layout_margin="10.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/pop_up_cancel_gray"
            android:onClick="doThings"
            android:text="Refresh"
            android:textSize="12.0sp" />

        <Button
            android:id="@+id/deleteTweet"
            android:layout_width="0dp"
            android:layout_height="25.0dip"
            android:layout_margin="10.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/pop_up_cancel_gray"
            android:onClick="doThings"
            android:text="Delete"
            android:textSize="12.0sp" />

        <Button
            android:id="@+id/logOut"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="25.0dip"
            android:layout_margin="10.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/pop_up_cancel_gray"
            android:onClick="doThings"
            android:text="Log Out"
            android:textSize="12.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff00aff0"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_SelectAll"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_margin="10.0dip"
                android:layout_weight="3.0"
                android:button="@drawable/checkboxselector"
                android:checked="false"
                android:contentDescription="@string/Select_All"
                android:padding="5.0dip"
                android:singleLine="false"
                android:text="@string/Select_All"
                android:textColor="@color/white"
                android:textSize="12.0sp" />

            <LinearLayout
                android:id="@+id/lyt_selected"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.0"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_selectedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:text="0"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#ffe9f6fd"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="were selected."
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#ffe9f6fd"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_DMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkboxselector"
                android:checked="false"
                android:enabled="false" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="Direct Message (soon)"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="8sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chk_MyTweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkboxselector"
                android:checked="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="Tweets"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="10.0sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chk_Mentions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkboxselector"
                android:checked="true" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="Mentions"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="10.0sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chk_RTs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkboxselector"
                android:checked="true" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="RT's"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="10.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffb7f8ff"
            android:orientation="vertical" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tweetsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adViewBanner" />
</androidx.constraintlayout.widget.ConstraintLayout>